# GENERATIVE-COLLAPSE-DYNAMICS

./: .commit_msg.txt  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .receipt  .windsurfrules  404.html  ACADEMIC_STATUS_REPORT.md  AGENTS.md  AI_WORKFLOW.md  ANALYSIS_SUMMARY.txt  ARCHITECTURAL_PROOF.md  ARCHITECTURE.md  AXIOM.md  CASEPACK_REFERENCE.md  CATALOGUE.md  CERN_HIGGS_RESEARCH.md  CHANGELOG.md  CLAUDE.md  CLINICAL_NEUROSCIENCE_ASSESSMENT.md  CODE_OF_CONDUCT.md  COMMIT_PROTOCOL.md  COMPUTATIONAL_OPTIMIZATIONS.md  CONTRIBUTING.md  CROSS_DOMAIN_REALIZATIONS.md  DATA_CORRECTIONS.md  DEEP_RESEARCH_SWEEP.md  ENHANCEMENT_AUDIT.md  EXTENSIONS.md  EXTENSIONS_IMPLEMENTATION.md  EXTENSION_INTEGRATION.md  FACE_POLICY.md  FUNCTIONAL_SYSTEMS.md  GCD_INTERCOMMUNICATION_MAP.json  GCD_RCFT_IMPLEMENTATION_ROADMAP.md  GLOSSARY.md  GLOSSARY_SYSTEM.md  IMMUTABLE_RELEASE.md  INFRASTRUCTURE_GEOMETRY.md  (+88 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: SECRETS.md  copilot-coding-agent.yml  copilot-instructions.md  dependabot.yml
_astro/: AdvancedExplorer.astro_astro_type_script_index_0_lang.9oSQaK00.js  AdvancedExplorer.astro_astro_type_script_index_0_lang.BBZWsQcW.js  AdvancedExplorer.astro_astro_type_script_index_0_lang.BeIm_CoX.js  AdvancedExplorer.astro_astro_type_script_index_0_lang.BvEeRhFd.js  AdvancedExplorer.astro_astro_type_script_index_0_lang.CN5CkLEX.js  AdvancedExplorer.astro_astro_type_script_index_0_lang.CNkKpuzc.js  AdvancedExplorer.astro_astro_type_script_index_0_lang.D-ShADKr.js  AdvancedExplorer.astro_astro_type_script_index_0_lang.Gb9cYrL7.js  AdvancedExplorer.astro_astro_type_script_index_0_lang.Xs9g61sL.js  AdvancedExplorer.astro_astro_type_script_index_0_lang.agrop8B4.js  AdvancedExplorer.astro_astro_type_script_index_0_lang.opXkwPE6.js  DiachronicTimeline.astro_astro_type_script_index_0_lang.B8xtTMja.js  DiachronicTimeline.astro_astro_type_script_index_0_lang.BIjTXEHS.js  DiachronicTimeline.astro_astro_type_script_index_0_lang.Bh4JKJ3F.js  DiachronicTimeline.astro_astro_type_script_index_0_lang.CSuIzjm2.js  DiachronicTimeline.astro_astro_type_script_index_0_lang.ClVpu0mf.js  DiachronicTimeline.astro_astro_type_script_index_0_lang.DIeQ0APB.js  DiachronicTimeline.astro_astro_type_script_index_0_lang.OJbf_LQC.js  DiagnosticSuite.astro_astro_type_script_index_0_lang.ClXDpdHZ.js  DiagnosticSuite.astro_astro_type_script_index_0_lang.CwDZZlMY.js  DiagnosticSuite.astro_astro_type_script_index_0_lang.D51pegdn.js  DiagnosticSuite.astro_astro_type_script_index_0_lang.DmClRCZp.js  DiagnosticSuite.astro_astro_type_script_index_0_lang.ErLbmu60.js  DiagnosticSuite.astro_astro_type_script_index_0_lang.JqxxqwF8.js  DiagnosticSuite.astro_astro_type_script_index_0_lang.f5AkxSp7.js  DomainLayout.astro_astro_type_script_index_0_lang.3h4GfIgT.js  DomainLayout.astro_astro_type_script_index_0_lang.B7dHmiNW.js  DomainLayout.astro_astro_type_script_index_0_lang.BLWGDxvq.js  DomainLayout.astro_astro_type_script_index_0_lang.BV4GRayS.js  DomainLayout.astro_astro_type_script_index_0_lang.Brjx4IVT.js  DomainLayout.astro_astro_type_script_index_0_lang.Btfcb7DA.js  DomainLayout.astro_astro_type_script_index_0_lang.Ca1BWKBq.js  DomainLayout.astro_astro_type_script_index_0_lang.CzjnaVS7.js  DomainLayout.astro_astro_type_script_index_0_lang.D1xzax-_.js  DomainLayout.astro_astro_type_script_index_0_lang.D5zRu8eb.js  DomainLayout.astro_astro_type_script_index_0_lang.DYemEiLd.js  DomainLayout.astro_astro_type_script_index_0_lang.DqBURLGh.js  DomainLayout.astro_astro_type_script_index_0_lang.EUAXrHJW.js  FormulaBuilder.astro_astro_type_script_index_0_lang.Clug5whZ.js  FormulaBuilder.astro_astro_type_script_index_0_lang.D4AWYLzA.js  (+401 more)
about/: index.html
archive/: README.md
artifacts/: test_landscape_profile.json  test_registry.json  test_registry_flat.csv  validator.baseline.json  validator.negative.json
astronomy/: index.html
atomic_physics/: index.html
awareness_cognition/: index.html
blackhole/: index.html
brain/: index.html
cai/: index.html
calculator/: index.html
canon/: README.md  anchors.yaml  astro_anchors.yaml  atom_anchors.yaml  clin_anchors.yaml  evo_anchors.yaml  gcd_anchors.yaml  kin_anchors.yaml  matl_anchors.yaml  nuc_anchors.yaml  qm_anchors.yaml  rcft_anchors.yaml  sm_anchors.yaml  weyl_anchors.yaml
casepacks/: JACKSON_MATHEMATICAL_REFERENCE.md  JACKSON_TIER2_DIAGNOSTIC.md  README.md  REORG_AUDIT.json  REORG_AUDIT.md  TAXONOMY.md  UMCP-REF-E2E-0001_artifacts.tgz  validator_artifacts.tgz
ce-chatgpt/: DEPLOY.md  INSTRUCTIONS.md  README.md  actions.schema.json  openapi.json
clinical_neuroscience/: index.html
closures/: F_from_omega.py  README.md  __init__.py  curvature_neighborhood.default.v1.yaml  gamma.default.v1.yaml  hello_world.py  norms.l2_eta1e-3.v1.yaml  registry.yaml  return_domain.window64.v1.yaml  scale_ladder.py  stiffness_check.py  tau_R_compute.py  tau_R_optimized.py  unified_minimal_structure.py
cognitive-equalizer/: index.html
consciousness_coherence/: index.html
continuity/: index.html
continuity_theory/: index.html
contracts/: ASTRO.INTSTACK.v1.yaml  ATOM.INTSTACK.v1.yaml  CHANGELOG.md  FINANCE.INTSTACK.v1.yaml  GCD.INTSTACK.v1.yaml  KIN.INTSTACK.v1.yaml  MATL.INTSTACK.v1.yaml  NUC.INTSTACK.v1.yaml  QM.INTSTACK.v1.yaml  RCFT.INTSTACK.v1.yaml  RCFT.INTSTACK.v1.yaml.backup  README.md  SECURITY.INTSTACK.v1.yaml  SM.INTSTACK.v1.yaml  UMA.INTSTACK.v1.0.1.yaml  UMA.INTSTACK.v1.yaml  UMA.INTSTACK.v2.yaml  WEYL.INTSTACK.v1.yaml
data/: QUANTUM_OPTICS_ANALYSIS.md  atom_dot_device_A.npz  atom_dot_device_B.npz  atom_dot_device_C.npz  atom_dot_device_D.npz  atom_dot_device_E.npz  atom_dot_device_F.npz  atom_dot_summary.npz  physics_observations_complete.csv  quantum_optics_consolidated.csv  quantum_optics_likelihood.csv  sinclair_clean.csv  sinclair_prxq_2022.csv  (+5 more)
src/umcp_cpp/: CMakeLists.txt  README.md
src/umcp_cpp/bindings/: py_umcp.cpp
src/umcp_cpp/include/umcp/: integrity.hpp  kernel.hpp  seam.hpp
src/umcp_cpp/src/: integrity.cpp  kernel.cpp  seam.cpp
src/umcp_cpp/tests/: test_kernel.cpp
(+1394 files in other folders)
