#
# UMCP runnable + publication-grade repo configuration.
# - build system (setuptools)
# - project metadata
# - runtime deps (minimal)
# - dev/test deps
# - pytest config
#
# IMPORTANT:
# - keywords belongs at [project].keywords (list of strings)
# - [project.urls] values MUST be strings (valid URLs), not lists

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umcp"
version = "1.5.0"
description = "Universal Measurement Contract Protocol (UMCP): Production-grade contract-first validation framework with GCD and RCFT. Core Axiom: What Returns Through Collapse Is Real. Features bidirectional cross-references, closure registries, and full reproducibility."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
  { name = "Clement Paulus" }
]

keywords = ["UMCP", "GCD", "RCFT", "contract-first", "validation", "reproducibility", "casepacks", "fractal", "recursive-field"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Monitoring"
]

# Core runtime dependencies for validation engine
# These are the ONLY dependencies needed for full UMCP validation functionality
dependencies = [
  "pyyaml>=6.0.1",
  "jsonschema>=4.23.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0"
]

# Optional dependencies for different use cases
[project.optional-dependencies]
# Production monitoring and resource tracking
production = ["psutil>=5.9.0"]

# Development tooling
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.8.0",
  "ruff==0.5.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "psutil>=5.9.0",
  "types-psutil>=6.0.0",
  "fastapi>=0.109.0",
  "httpx>=0.27.0"
]

# Testing suite
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.8.0"
]

# Communication extensions: REST API for remote validation and ledger access
# Provides HTTP endpoints for remote systems
# NOT required for core validation - use for HTTP/network interfaces only
api = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0"
]

# Communication extensions: Interactive visualization and exploration
# Provides Streamlit dashboard for exploring validation results
# NOT required for core validation - use for web UI only
viz = [
  "streamlit>=1.30.0",
  "pandas>=2.0.0",
  "plotly>=5.18.0",
  "numpy>=1.24.0"
]

# All standard communication extensions (API + visualization)
# These provide standard protocol interfaces but are NOT needed for validation
communications = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "streamlit>=1.30.0",
  "pandas>=2.0.0",
  "plotly>=5.18.0",
  "numpy>=1.24.0"
]

# Everything (dev + production + communications)
all = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.5.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "psutil>=5.9.0",
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "streamlit>=1.30.0",
  "pandas>=2.0.0",
  "plotly>=5.18.0",
  "numpy>=1.24.0"
]

# These MUST be strings; do not put lists here.
[project.urls]
Homepage = "https://github.com/calebpruett927/UMCP-Metadata-Runnable-Code"
Repository = "https://github.com/calebpruett927/UMCP-Metadata-Runnable-Code"
Documentation = "https://github.com/calebpruett927/UMCP-Metadata-Runnable-Code/blob/main/README.md"
Issues = "https://github.com/calebpruett927/UMCP-Metadata-Runnable-Code/issues"
Changelog = "https://github.com/calebpruett927/UMCP-Metadata-Runnable-Code/blob/main/CHANGELOG.md"

[project.scripts]
umcp = "umcp.cli:main"
umcp-ext = "umcp.umcp_extensions:main"
umcp-api = "umcp.api_umcp:run_server"
umcp-dashboard = "umcp.dashboard:main"

# Note: Contract discovery is built into core validation engine.
# These entry points are for external tool integration only.
[project.entry-points."umcp.contracts"]
uma = "umcp.contracts.uma:get_contract"
gcd = "umcp.contracts.gcd:get_contract"
rcft = "umcp.contracts.rcft:get_contract"

# Extension entry points for plugin discovery
[project.entry-points."umcp.extensions"]
api = "umcp.api_umcp:app"
visualization = "umcp.dashboard:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["umcp*"]

[tool.setuptools.package-data]
umcp = [
  "py.typed",
  "../contracts/*.yaml",
  "../closures/**/*.py",
  "../schemas/*.json",
  "../canon/*.yaml"
]

# Auto-discovery of extensions
[tool.setuptools.dynamic]
# Extensions are auto-discovered from root directory

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --tb=short"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "default",
  "ignore::DeprecationWarning"
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

# Parallel execution hint: run with `pytest -n auto` for multi-core speedup
# Uses pytest-xdist to distribute tests across CPU cores

[tool.coverage.run]
branch = true
source = ["src/umcp"]
omit = [
  "src/umcp/cli.py",  # CLI is subprocess-heavy, difficult to test comprehensively
  "src/umcp/api_umcp.py",  # Planned REST API extension - stub code
  "src/umcp/minimal_cli.py",  # Minimal CLI alternative - not primary interface
  "src/umcp/preflight.py",  # Complex error-handling paths, tested via integration
  "src/umcp/dashboard.py",  # Streamlit UI - requires special testing, UI-heavy
  "src/umcp/outputs.py",  # Output formatting module - generates SVG/HTML/LaTeX
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "C4",   # flake8-comprehensions
  "RUF",  # Ruff-specific rules
]
ignore = [
  "E501",    # Line too long (handled by formatter)
  "RUF001",  # Ambiguous unicode in strings (intentional for Greek letters)
  "RUF002",  # Ambiguous unicode in docstrings (intentional for Greek letters)
  "RUF003",  # Ambiguous unicode in comments (intentional for Greek letters)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "SIM105"]  # Allow longer lines and try-except-pass in tests
"scripts/**" = ["E501", "E741", "SIM108", "SIM118", "UP038"]  # Allow longer lines, physics variable names, and verbose conditionals in scripts
"src/umcp/__init__.py" = ["E402"]  # Module imports after version check
"src/umcp/preflight.py" = ["SIM102"]  # Allow nested ifs for clarity in complex condition checks

# Type checking configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true

# Module-specific overrides for third-party untyped libraries
[[tool.mypy.overrides]]
module = [
  "yaml.*",
  "streamlit.*",
  "plotly.*",
  "uvicorn.*",
  "pandas.*",
  "numpy.*",
]
ignore_missing_imports = true

# Exclude extension files from strict type checking (UI-heavy, optional deps)
[[tool.mypy.overrides]]
module = ["umcp.dashboard", "umcp.api_umcp", "umcp.outputs"]
ignore_errors = true

