#
# UMCP runnable + publication-grade repo configuration.
# - build system (setuptools)
# - project metadata
# - runtime deps (minimal)
# - dev/test deps
# - pytest config
#
# IMPORTANT:
# - keywords belongs at [project].keywords (list of strings)
# - [project.urls] values MUST be strings (valid URLs), not lists

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umcp"
version = "2.3.1"
description = "Contract-first validation framework for reproducible computational workflows. Six kernel invariants, 23 scientific domains, 746 proven theorems, 20,235 tests, three-layer C/C++/Python architecture, three-valued verdicts."
readme = "README_PYPI.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
  { name = "Clement Paulus" }

]

keywords = [
  "validation",
  "reproducibility",
  "scientific-computing",
  "measurement",
  "contract-first",
  "kernel",
  "data-quality",
  "integrity",
  "physics",
  "computational-science",
  "UMCP",
  "GCD",
  "particle-physics",
  "neuroscience",
  "cosmology",
  "quantum-mechanics",
  "materials-science",
  "finance",
  "three-valued-logic",
  "mathematical-proof",
  "collapse-dynamics",
  "fidelity",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Typing :: Typed",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Natural Language :: English",
]

# Core runtime dependencies for validation engine
# These are the ONLY dependencies needed for full UMCP validation functionality
dependencies = [
  "pyyaml>=6.0.1",
  "jsonschema>=4.26.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0"
]

# Optional dependencies for different use cases
[project.optional-dependencies]
# Production monitoring and resource tracking
production = ["psutil>=5.9.0"]

# Development tooling
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.14.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "psutil>=5.9.0",
  "types-psutil>=6.0.0",
  "types-jsonschema>=4.0.0",
  "fastapi>=0.109.0",
  "httpx>=0.27.0"
]

# Testing suite
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.8.0"
]

# Communication extensions: REST API for remote validation and ledger access
# Provides HTTP endpoints for remote systems
# NOT required for core validation - use for HTTP/network interfaces only
api = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0"
]

# All standard communication extensions (API)
# These provide standard protocol interfaces but are NOT needed for validation
communications = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0"
]

# C/C++ accelerator build dependencies (optional)
# C99 core: cd src/umcp_c && mkdir build && cd build && cmake .. && make
# C++ + pybind11: pip install -e ".[cpp]" then cd src/umcp_cpp && mkdir build && cd build && cmake .. && make
cpp = [
  "pybind11>=2.12.0",
  "numpy>=1.24.0"
]

# MCP server — exposes GCD kernel as transport-layer constrained tools
mcp = [
  "mcp[cli]>=1.0.0"
]

# Everything (dev + production + communications)
all = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.14.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "psutil>=5.9.0",
  "types-psutil>=6.0.0",
  "types-jsonschema>=4.0.0",
  "fastapi>=0.109.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.27.0",
  "numpy>=1.24.0",
  "pybind11>=2.12.0"
]

# These MUST be strings; do not put lists here.
[project.urls]
Homepage = "https://calebpruett927.github.io/GENERATIVE-COLLAPSE-DYNAMICS/"
Repository = "https://github.com/calebpruett927/GENERATIVE-COLLAPSE-DYNAMICS"
Documentation = "https://calebpruett927.github.io/GENERATIVE-COLLAPSE-DYNAMICS/"
"Bug Tracker" = "https://github.com/calebpruett927/GENERATIVE-COLLAPSE-DYNAMICS/issues"
Changelog = "https://github.com/calebpruett927/GENERATIVE-COLLAPSE-DYNAMICS/blob/main/CHANGELOG.md"
"Quick Start" = "https://github.com/calebpruett927/GENERATIVE-COLLAPSE-DYNAMICS/blob/main/QUICKSTART_TUTORIAL.md"
Download = "https://pypi.org/project/umcp/#files"
"Kernel Specification" = "https://github.com/calebpruett927/GENERATIVE-COLLAPSE-DYNAMICS/blob/main/KERNEL_SPECIFICATION.md"
"Catalogue" = "https://github.com/calebpruett927/GENERATIVE-COLLAPSE-DYNAMICS/blob/main/CATALOGUE.md"
"Contributing" = "https://github.com/calebpruett927/GENERATIVE-COLLAPSE-DYNAMICS/blob/main/CONTRIBUTING.md"

[project.scripts]
umcp = "umcp.cli:main"
umcp-ext = "umcp.umcp_extensions:main"
umcp-api = "umcp.api_umcp:main"
umcp-calc = "umcp.universal_calculator:main"
umcp-finance = "umcp.finance_cli:main"
umcp-mcp = "umcp_mcp.server:main"
umcp-ce = "umcp.cognitive_equalizer:main"
aequator-cognitivus = "umcp.cognitive_equalizer:main"

# Note: Contract discovery is built into core validation engine.
# These entry points are for external tool integration only.
[project.entry-points."umcp.contracts"]
uma = "umcp.contracts.uma:get_contract"
gcd = "umcp.contracts.gcd:get_contract"
rcft = "umcp.contracts.rcft:get_contract"

# Extension entry points for plugin discovery
[project.entry-points."umcp.extensions"]
api = "umcp.api_umcp:app"

[tool.setuptools]
package-dir = {"" = "src", "closures" = "closures"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["umcp*", "umcp_mcp*", "closures*"]

[tool.setuptools.package-data]
umcp = [
  "py.typed",
  "../contracts/*.yaml",
  "../closures/**/*.py",
  "../schemas/*.json",
  "../canon/*.yaml"
]
closures = [
  "**/*.py",
  "**/*.yaml"
]

# Auto-discovery of extensions
[tool.setuptools.dynamic]
# Extensions are auto-discovered from root directory

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --tb=short"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "default",
  "ignore::DeprecationWarning"
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "layer0: Layer 0 — algebraic identity bounds (F+ω=1, IC≤F, ranges)",
  "layer1: Layer 1 — regime gate boundary probes (STABLE/WATCH/CRITICAL/COLLAPSE)",
  "layer2: Layer 2 — domain embedding reference points",
  "manifold: all manifold bound tests (layers 0-2)",
  "bounded_identity: test is subsumed by manifold bound surface (auto-validated when bounds pass)",
  "tier0: T0 — manifold bounds (runs first, gates all other tiers)",
  "tier1: T1 — pure kernel/math (no subprocess, no IO)",
  "tier2: T2 — domain embeddings + measurement pipelines",
  "tier3: T3 — schema/contract/file structure (default tier)",
  "tier4: T4 — CLI/integration/e2e (subprocess-heavy)",
  "tier5: T5 — benchmark (runs last, informational)",
  "integration: integration tests (full repo validation)",
]

# Parallel execution hint: run with `pytest -n auto` for multi-core speedup
# Uses pytest-xdist to distribute tests across CPU cores

[tool.coverage.run]
branch = true
source = ["src/umcp"]
omit = [
  "src/umcp/cli.py",  # CLI is subprocess-heavy, difficult to test comprehensively
  "src/umcp/api_umcp.py",  # Planned REST API extension - stub code
  "src/umcp/minimal_cli.py",  # Minimal CLI alternative - not primary interface
  "src/umcp/preflight.py",  # Complex error-handling paths, tested via integration
  "src/umcp/outputs.py",  # Output formatting module - generates SVG/HTML/LaTeX
  "src/umcp/finance_cli.py",  # Finance CLI - subprocess/argparse-heavy
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["archive", "build", "build_*", "src/umcp_c/build*", "src/umcp_cpp/build*"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "C4",   # flake8-comprehensions
  "RUF",  # Ruff-specific rules
]
ignore = [
  "E501",    # Line too long (handled by formatter)
  "RUF001",  # Ambiguous unicode in strings (intentional for Greek letters)
  "RUF002",  # Ambiguous unicode in docstrings (intentional for Greek letters)
  "RUF003",  # Ambiguous unicode in comments (intentional for Greek letters)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "SIM105", "E402"]  # Allow longer lines, try-except-pass, and path-manipulated imports in tests
"scripts/**" = ["E501", "E741", "E402", "SIM108", "SIM118", "UP038"]  # Allow longer lines, physics variable names, path-manipulated imports, and verbose conditionals in scripts
"src/umcp/__init__.py" = ["E402"]  # Module imports after version check
"src/umcp/preflight.py" = ["SIM102"]  # Allow nested ifs for clarity in complex condition checks

# Type checking configuration
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true

# Module-specific overrides for third-party untyped libraries
[[tool.mypy.overrides]]
module = [
  "yaml.*",
  "uvicorn.*",
  "numpy.*",
  "scipy.*",
  "psutil.*",
  "pandas.*",
  "closures.*",
]
ignore_missing_imports = true

# Exclude extension files from strict type checking (optional deps)
[[tool.mypy.overrides]]
module = ["umcp.api_umcp", "umcp.api_routes_v2", "umcp.outputs"]
ignore_errors = true

# Exclude Weyl closures from strict checking (scientific computing, scipy-heavy)
[[tool.mypy.overrides]]
module = ["closures.weyl.*"]
ignore_errors = true

# Exclude other closure subdirectories (domain-specific, not library code)
[[tool.mypy.overrides]]
module = ["closures.*"]
ignore_errors = true

# Tests, scripts, and examples: not library code, suppress strict annotations
[[tool.mypy.overrides]]
module = ["tests.*", "examples.*", "scripts.*"]
ignore_errors = true


# Pyright/Pylance configuration for VS Code
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportMissingModuleSource = false
reportUnknownArgumentType = false
reportUnnecessaryTypeIgnoreComment = false

venvPath = "."
venv = ".venv"

extraPaths = ["src", "."]

# Exclude casepack scripts from strict checking
ignore = ["casepacks", "scripts"]
